# personality-type-prediction-ops

./: README.md  pyproject.toml
archives/old_data_gathering/: VideoTranscriptFetcher.py
archives/old_test_model/: old_test_model.py
archives/old_test_preprocessing/: preprocess_images.py
backend/: README.md  predict.py  test.py  utils.py
backend/gathering_data/: GetTrainingData.py  README.md  SubjectivePersonality.py  YoutubeBrowser.py  get_interviews.py  get_interviews_time.py  speaker_diarization.py
backend/predict/: get_transcript_from_url.py  predict.py
backend/predict/image/: README.md  predict.py
backend/predict/img/: README.md  predict.py
backend/predict/text/: README.md  predict.py
backend/preparing_data/: README.md  parse_ops.py
backend/preparing_data/img/: README.md  improve_quality.py  preprocess_image.py
backend/preparing_data/text/: README.md  clean.py
backend/release/: README.md
backend/test/: test.py
backend/train/: train.py
backend/train/img/: README.md  train.py
backend/train/text/: README.md  train.py
frontend/: README.md
frontend/src/: chart_frame.py  link_frame.py  main.py  main_app_window.py  predict_frame.py  selfie_frame.py  text_frame.py
static/: README.md
static/csv/: interview_links.csv  model_img_accuracies.csv  model_img_accuracies_sample.csv  model_img_accuracies_sample2.csv  records.csv  records_cleaned.csv  records_cleaned_processed.csv  records_update.csv  records_update_cleaned.csv  records_update_cleaned_processed.csv
tools/: scraper.py
tools/archives/: clear_tweets.py  old_labeling_main.py
tools/archives/input_data/Decider/: HillaryClinton.txt  Madonna.txt  MichelleObama.txt  Oprah.txt  SpeakerPelosi.txt  elonmusk.txt  florencemachine.txt  jk_rowling.txt  katiecouric.txt  katyperry.txt  newtgingrich.txt  rihanna.txt
tools/archives/input_data/Observer/: BarackObama.txt  DrewBarrymore.txt  EdwardNorton.txt  GwynethPaltrow.txt  JLo.txt  Nick_Offerman.txt  kendricklamar.txt  megynkelly.txt  morgan_freeman.txt
tools/labeling/: YoutubeBrowser.py  clear_tweets.py  image_downloader.py  records.csv  subjective_personality.py
tools/labeling/input_data/Decider/: BillGates.txt  EmmaWatson.txt  (+6 more)
(+11 files in other folders)
